solve some layout issues, update layout

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    border: 1px solid red;
 }
 
 body {
@@ -14,12 +15,14 @@ body {
 .sidebar {
     grid-row: span 2;
     display: grid;
+    grid-auto-rows: max-content;
     gap: 2rem;
     padding: 1rem 3rem 1rem 1rem;
 }
 
 .sidebar > div {
     display: grid;
+    gap: 0.5rem;
 }
 
 .sidebar > div > a {
@@ -55,8 +58,10 @@ body {
 
 .search-bar {
     grid-area: search;
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr;
     align-items: center;
+    gap: 1rem;
 }
 
 .user-profile {
@@ -105,11 +110,39 @@ body {
     grid-row: 2;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: min-content auto;
+    grid-template-rows: max-content 1fr;
 }
 
 .projects {
     display: grid;
+}
+
+.projects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 200px;
+    grid-row: span 2;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-radius: 8px;
+    padding: 2rem 1rem;
+    border-left: 0.5rem solid orange;
+}
+
+.container > .options {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 2;
+
+}
+
+.container > a {
+    grid-column: span 2;
 }
 
 .announcements {
